fluxcd/apps/production/archlinux/aur/patch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directory-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: directory
        volumeMounts:
        - mountPath: /public
          name: files
          subPath: aur
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: archlinux-pvc
      securityContext:
        seLinuxOptions:
          user: system_u
          role: system_r
          type: container_t
          level: s0:c104,c904
