fluxcd/apps/production/archlinux/aur/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directory-ingress
  annotations:
    homelab/public: "true"
    external-dns.kubernetes.io/hostname: aur.${DOMAIN}
    external-dns.kubernetes.io/target: ${DOMAIN}
