fluxcd/apps/production/archlinux/aur/patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directory-deployment
spec:
  template:
    spec:
      containers:
      - name: directory
        volumeMounts:
        - mountPath: /public
          name: files
          subPath: aur
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: archlinux-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directory-ingress
  annotations:
    homelab/public: "true"
    external-dns.alpha.kubernetes.io/hostname: aur.${DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DOMAIN}
